--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "off_blockway"
 version = "0.0.1"
 authors = ["Ezra Goss <ezragoss@me.com>"]
+description = "Custom library for the OffBlockway project. I wouldn't use this if I were you :("
+license = "No license"
+
+
 
 [dependencies]
 sha3 = "0.6.0"
