Gave an actual license to the toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "off_blockway"
 version = "0.0.1"
 authors = ["Ezra Goss <ezragoss@me.com>"]
 description = "Custom library for the OffBlockway project. I wouldn't use this if I were you :("
-license = "No license"
+license = "MIT License"
 
 
 
